# Projects

./: LICENSE  Quantum Multi-Target Search using Grover’s Algorithm  README.md
Q_ALU/: .gitignore  README.md  alu_calc.py  pyproject.toml  requirements.txt
Q_ALU/examples/: alu_calc.py  draw_circuits.py  setup_ibm.py
Q_ALU/qalu/: __init__.py  circuits.py  execution.py
Quantum Multi-Target Search using Grover’s Algorithm/: README.md  grover_multitarget_5q.ipynb
Quantum-Multi-Target-Search-using-Grover-Algorithm/: README.md  grover_multitarget_5q.ipynb
Quantum-Multi-Target-Search-using-Grover’s-Algorithm/: grover_multitarget_5q.ipynb
fire-alarm-sim900a/: README.md
fire-alarm-sim900a/src/FireAlarm/: Fire_alarm.ino
magic-8-ball/: LICENSE  Magic_8_Ball.ipynb  README.md
magic-8-ball/src/Magic8Ball/: Magic_8_ball.ipynb
